<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  tools:context=".activity.LawsActivity"
                  android:orientation="vertical"
                  tools:showIn="@layout/activity_laws"
                  android:padding="@dimen/space_2"
    >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_title"
                android:textSize="@dimen/text_size_xlarge"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash2"
                android:layout_marginTop="@dimen/space_1"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_email"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_phone"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_features_title"
                android:textSize="@dimen/text_size_large"
                android:layout_marginTop="@dimen/space_1"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_feature1"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_feature2"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_feature3"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_feature4"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_feature5"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laws_final_description"
                android:layout_marginTop="@dimen/space_1"
        />

    </LinearLayout>

</ScrollView>