<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
        android:id="@+id/activity_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pic12" />

            <TextView
                android:id="@+id/login_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/space_0.5"
                android:textSize="14sp" />

            <co.avalinejad.iq.util.RoundCornerFrameLayout

                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bottom_left="8dp"
                app:bottom_right="8dp"
                app:top_left="8dp"
                app:top_right="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        fontPath="fonts/IRYEKANB.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:text="@string/splash2"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix" />
                </FrameLayout>


            </co.avalinejad.iq.util.RoundCornerFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_message" />

            <TextView
                fontPath="fonts/IRYEKANB.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/space_0.5"
                android:text="شماره تلفن:"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <co.avalinejad.iq.util.RoundCornerFrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:bottom_left="8dp"
                app:bottom_right="8dp"
                app:top_left="8dp"
                app:top_right="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff">

                    <EditText
                        android:id="@+id/login_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/textDark"
                        android:inputType="number" />

                </FrameLayout>
            </co.avalinejad.iq.util.RoundCornerFrameLayout>

            <TextView
                android:id="@+id/passwordTitle"
                fontPath="fonts/IRYEKANB.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/space_2"
                android:layout_marginBottom="@dimen/space_0.5"
                android:text="کد فعال سازی:"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <co.avalinejad.iq.util.RoundCornerFrameLayout
                android:id="@+id/passwordFrame"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:bottom_left="8dp"
                app:bottom_right="8dp"
                app:top_left="8dp"
                app:top_right="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff">

                    <EditText
                        android:id="@+id/login_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/textDark"
                        android:inputType="number" />

                </FrameLayout>
            </co.avalinejad.iq.util.RoundCornerFrameLayout>

            <co.avalinejad.iq.util.RoundCornerFrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_4"
                app:bottom_left="4dp"
                app:bottom_right="4dp"
                app:top_left="4dp"
                app:top_right="4dp">

                <FrameLayout
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:paddingLeft="@dimen/space_2"
                    android:paddingTop="@dimen/space_1"
                    android:paddingRight="@dimen/space_2"
                    android:paddingBottom="@dimen/space_1">

                    <TextView
                        android:id="@+id/loginTitle"
                        fontPath="fonts/IRYEKANB.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:gravity="center"
                        android:text="تایید"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix" />
                </FrameLayout>
            </co.avalinejad.iq.util.RoundCornerFrameLayout>

            <TextView
                android:id="@+id/laws_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_1"
                android:gravity="center"
                android:padding="@dimen/space_2"
                android:text="@string/i_agree_link" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>